--- a/templates/base.html
+++ b/templates/base.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <script type="text/javascript" src="{{ url_for('static', filename='simple.js') }}"></script>
     {% block meta_custom %}
     <meta name="description" content="Placeholder">
     {% endblock %}
@@ -15,7 +16,7 @@
     {% endblock %}
     <title>
         {% block title %}
-        The Grid
+            Youtube Data Analysis
         {% endblock %}
     </title>
 </head>
