--- a/templates/base.html
+++ b/templates/base.html
@@ -1,31 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <script type="text/javascript" src="{{ url_for('static', filename='simple.js') }}"></script>
-    {% block meta_custom %}
-    <meta name="description" content="Placeholder">
-    {% endblock %}
-    {% block extra_block %}{% endblock %}
-    {% block favicon_stylesheet %}
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
-    <link rel="icon" type="image/png"
-          href="{{ url_for('static', filename='favicon.png') }}">
-    <link rel="stylesheet" type="text/css"
-          href="{{ url_for('static', filename='main.css') }}">
-
-    {% endblock %}
-    <title>
-        {% block title %}
-            Youtube Data Analysis
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="{{ url_for('static', filename='bootstrap-4.2.1.min.css') }}">
+        <link rel="stylesheet" href="{{ url_for('static', filename='main.css') }}">
+        <link rel="icon" href="{{ url_for('static', filename='favicon.png') }}">
+        <script src="{{ url_for('static', filename='jquery-3.3.1.min.js') }}"></script>
+        <script src="{{ url_for('static', filename='popper-1.14.6.umd.min.js') }}" async></script>
+        <script src="{{ url_for('static', filename='bootstrap-4.2.1.min.js') }}" async></script>
+        <!--<script src="{{ url_for('static', filename='simple.js') }}" async></script>-->
+        <title>
+            {% block title %}
+                Youtube Data Analysis
+            {% endblock %}
+        </title>
+    </head>
+    <body class="m-1">
+        {% block body %}
         {% endblock %}
-    </title>
-</head>
-<body>
-{% block body %}
-{% endblock %}
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
-</body>
+    </body>
 </html>
