--- a/static/main.css
+++ b/static/main.css
@@ -1,22 +1,24 @@
-.dir_clarification {
-    margin-top: 0.85em;
-    margin-bottom: 0.85em;
-    }
-
-input:focus::-moz-placeholder{
+:focus::-moz-placeholder, :hover::-moz-placeholder {
     opacity: 0.1;
-    transition: opacity 3s;
+}
 
-}
-input:hover::-moz-placeholder{
+:focus::-webkit-input-placeholder, :hover::-webkit-input-placeholder {
     opacity: 0.1;
-    transition: opacity 3s;
 }
-input::-moz-placeholder{
-    opacity: 0.5;
+
+input::-moz-placeholder {
+    opacity: 1;
+    transition: opacity 2s;
+
 }
 
 .path {
     font-weight: bold;
-    padding-right: 0.3em;
+    margin-right: 0.3em;
     }
+
+.shw-btn {
+    margin-top: 0.5em;
+    margin-bottom: 0.5em;
+    }
+}
