--- a/templates/base.html
+++ b/templates/base.html
@@ -9,15 +9,11 @@
         <script src="{{ url_for('static', filename='jquery-3.3.1.min.js') }}"></script>
         <script src="{{ url_for('static', filename='popper-1.14.6.umd.min.js') }}" async></script>
         <script src="{{ url_for('static', filename='bootstrap-4.2.1.min.js') }}" async></script>
-        <!--<script src="{{ url_for('static', filename='simple.js') }}" async></script>-->
         <title>
-            {% block title %}
-                Youtube Data Analysis
-            {% endblock %}
+            {% block title %}Youtube Data Analysis{% endblock %}
         </title>
     </head>
     <body class="m-1">
-        {% block body %}
-        {% endblock %}
+        {% block body %}{% endblock %}
     </body>
 </html>
