--- a/static/main.css
+++ b/static/main.css
@@ -1,17 +1,3 @@
-:focus::-moz-placeholder, :hover::-moz-placeholder {
-    opacity: 0.1;
-}
-
-:focus::-webkit-input-placeholder, :hover::-webkit-input-placeholder {
-    opacity: 0.1;
-}
-
-input::-moz-placeholder {
-    opacity: 1;
-    transition: opacity 2s;
-
-}
-
 .path {
     font-weight: bold;
     margin-right: 0.3em;
@@ -21,4 +7,10 @@ input::-moz-placeholder {
     margin-top: 0.5em;
     margin-bottom: 0.5em;
     }
+
+.prf-lst-prf-name {
+    display: inline-block;
+    margin-right: 0.5em;
+    width:60px;
+    font-weight: bold;
 }
