Get rid of profiles, change each project dir (formerly data dir) to act like a single profile instead. Cleaner, much simpler and fitting, given the nature of the tool

--- a/static/main.css
+++ b/static/main.css
@@ -11,6 +11,10 @@
 .prf-lst-prf-name {
     display: inline-block;
     margin-right: 0.5em;
-    width:60px;
+    width: 60px;
     font-weight: bold;
 }
+
+.rnm-sbmt {
+    display: none;
+    }
